--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,11 @@
     "browser_action":{
         "default_icon":"icon16.png",
         "default_popup":"popup.html"
-    }
+    },
+    "content_scripts" : [{
+        "matches" : ["http://*/*", "https://*/*"],
+        "js" : ["content.js"]
+    }]
 
     
 }
