--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,29 @@
 {
-    "name": "Envy",
-    "description": "L'extension de navigateur aidant les utilisateurs a connaître l'environnement dans lequel ils se trouvent",
-    "version": "1.0",
-    "permissions": [
-      "file://*/*",
-      "https://*/*",
-      "http://*/*",
-      "storage"
-    ],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "browser_action": {
-      "default_icon":"image_ENVY/highTest.png",
-      "default_title": "Jongler entre les diférents environnements",
-      "default_popup": "popup.html"
-    },
-    "content_scripts": [
-      {
-         "matches":    ["<all_urls>"],
-         "css":        ["style.css"],
-         "js":         ["contentScript.js"]
-      }
-   ],
-    "manifest_version": 2
-    
-  }
+  "name": "Envy", 
+  "description": "L'extension de navigateur aidant les utilisateurs a connaître l'environnement dans lequel ils se trouvent", 
+  "version": "1.0", 
+  "permissions": [ 
+    "file://*/*",
+    "https://*/*",
+    "http://*/*",
+    "storage"
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "browser_action": {
+    "default_icon":"image_ENVY/highTest.png", 
+    "default_title": "Jongler entre les différents environnements",
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+       "matches":    ["<all_urls>"],
+       "css":        ["style.css"],
+       "js":         ["contentScript.js"]
+    }
+ ],
+  "manifest_version": 2
+  
+}
